--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "merge-images": "^1.1.0",
     "mongoose": "^5.5.12",
     "node-fetch": "^2.6.0",
